--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Longlasting1805/js_calculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -11,11 +12,14 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-textfit": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
