--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Longlasting1805/js_calculator",
+  "homepage": "https://longlasting1805.github.io/js_calculator/",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
